--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <p>In this project,I made a breath analyser to detect the presence and concentration of alcohol in a person breath  </p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/maxresdefault.jpg" alt="img">
           </div>
         </div>
         <!--<div class="project-item">
