--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p>In this project,I made a IR senor based obstacle detection robot which can be controlled by user to detect the obstacle in coming in the robot path</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/robot.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -87,7 +87,7 @@
             <p>In this project,I made a dual band microstrip patch Antenna using slots which can work for two frequency bands of 900MHz and 2.4GHz</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/image.jfif" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -97,7 +97,7 @@
             <p>In this prject,I made a Bitcoin price predictor using various machine learning algorithm</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/img-2.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -107,7 +107,7 @@
             <p>In this project,I made a breath analyser to detect the presence and concentration of alcohol in a person breath  </p>
           </div>
           <div class="project-img">
-            <img src="./img/maxresdefault.jpg" alt="img">
+            <img src="./img/img-3.jpg" alt="img">
           </div>
         </div>
         <!--<div class="project-item">
