--- a/index.html
+++ b/index.html
@@ -139,7 +139,14 @@
           <p>
             <ul>
                 <li>C++</li>
+                <li>C</li>
                 <li>Python</li>
+                <li>Machine Learning</li>
+                <li>Embedded Systems</li>
+                <li>Tensorflow</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Scikit</li>
             </ul>
         </p>
           
