--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
       <div class="service-bottom">
         <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>
+          <!--<div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png"/></div>-->
           <h2>Technical Skills</h2>
           <p>
             <ul>
